added new breadcrumb to all inner pages

--- a/company-details/iwPWfSqVxCLC.html
+++ b/company-details/iwPWfSqVxCLC.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-    
-<!-- Mirrored from imojobs.com.ng/company-details/iwPWfSqVxCLC by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 20 Apr 2023 09:05:49 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -108,75 +105,70 @@
         </div>
     </div>
 </nav>
-
-
-
-        <div class="company-details-page">
-        <!-- start hero section -->
-        <div class="w-100 jumbotron-menu position-relative" >
-            <div class="col-lg-12 height-inherit d-flex flex-column justify-content-center" style="background: linear-gradient(94.52deg, rgba(20, 102, 28, 0.44) 16.29%, rgba(20, 102, 28, 0.28) 107.22%), url(itic%20main%20pix.html);">
-                <div class="display-4 mt-2 font-weight-bold text-white mt-md-45 text-center">
-                    <div class="mb-2 position-relative">
-                        <div class="position-relative text-capitalized text-white">
-                            Company Details                        </div>
-                    </div>
-                    <div class="lead text-light font-poppins">
-                        <a href="../index.html" class="fs-18 text-gray">Home</a> >  Company Details                    </div>
-                </div>
-                <div class="spacer py-5"></div>
-            </div>
-        </div>
-        <section class="hero-section position-relative bg-light py-40">
-            <div class="container">
-                <div class="row align-items-center justify-content-center ">
-                    <div class="col-12">
-                        <div class="row align-items-lg-center mb-3">
-                            <div class="col-lg-1 col-sm-2 col-3">
-                                <div class="company-profile-img mt-md-0 mt-3">
-                                    <img src="../uploads/profile-pictures/10/aaa.jpg"
-                                         alt="job_detail_logo">
-                                </div>
+    <div class="company-details-page">
+        <!--        Start BreadCrumb-->
+        <div class="breadcrumb-section text-white py-5 position-relative">
+            <div class="position-absolute top-0-cus w-100 h-100"></div>
+            <div class="container h-100 position-absolute top-0 w-100" style="left: 50%; transform: translateX(-50%)">
+                <div class="row h-100 align-items-center">
+                    <div class="col-lg-7 col-md-6 d-flex align-items-center">
+                        <div class="row align-items-center w-100">
+                            <div class="col-3">
+                                <img class="job-details rounded-circle" src="../uploads/profile-pictures/7/a.jpg" alt="">
                             </div>
-                            <div class="col-sm-10 col-9">
-                                <div class="hero-content ps-xl-0 ps-3">
-                                    <h4 class="text-secondary mb-0">
-                                        ByteBuilders Inc. 
-                                    </h4>
-                                    <div class="hero-desc d-flex align-items-center flex-wrap">
-                                        <div class="d-flex align-items-center me-4 pe-2">
-                                            <i class="fa-solid fa-briefcase text-gray me-3 fs-18"></i>
-                                            <p class="fs-14 text-gray mb-0">
-                                                Software
-                                            </p>
+                            <div class="col-8">
+                                <div class="pl-5 ml-5">
+                                    <div class="h4 w-100">Company Details</div>
+                                    <div class=" text-14 w-100 align-items-center justify-content-between jb-breadC font-archivo flex-wrap font-weight-light d-flex">
+                                        <div class="d-flex  align-items-center">
+                                            <span class="material-symbols-outlined jb-icon">work_history</span> Posted Jobs - 345
                                         </div>
-                                                                                    <div class="desc d-flex align-items-center me-lg-4 me-2 pe-2">
-                                                <i class="fa-solid fa-location-dot text-gray me-3 fs-18"></i>
-                                                <p class="fs-14 text-gray mb-0">
-                                                    Njaba,  Nigeria
-                                                </p>
-                                            </div>
-                                                                                                                            <div class="desc d-flex align-items-center me-lg-4 me-2 pe-2">
-                                                <i class="fa-solid fa-phone text-gray me-3 fs-18"></i>
-                                                <p class="fs-14 text-gray mb-0">
-                                                    8025678901
-                                                </p>
-                                            </div>
-                                                                                <div class="desc d-flex align-items-center me-lg-4 me-2 pe-2">
-                                            <i class="fa-solid fa-envelope text-gray me-3 fs-18"></i>
-                                            <p class="fs-14 text-gray mb-0">
-                                                info@bytebuildersinc.ng
-                                            </p>
+                                        <div class="d-flex align-items-center justify-content-between">
+                                            <span class="material-symbols-outlined jb-icon">schedule</span> joined on 2018
                                         </div>
+                                        <div class="d-flex align-items-center justify-content-between">
+                                            <span class="material-symbols-outlined jb-icon">payments</span> open offers (23)
+                                        </div>
+                                    </div>
+                                    <div class="w-100 text-1 d-flex align-items-center mt-2 justify-content-evenly mb-3">
+                                        Company Rating: <span class="text-dark bg-yellow py-1 px-3 ">4.5</span>
+                                        <div class="ml-5 rating">
+                                            <span class="material-symbols-outlined clr-yellow ml-2">star</span>
+                                            <span class="material-symbols-outlined clr-yellow">star</span>
+                                            <span class="material-symbols-outlined clr-yellow">star</span>
+                                            <span class="material-symbols-outlined">star</span>
+                                            <span class="material-symbols-outlined">star</span>
+                                        </div>
+                                    </div>
+                                    <div class="w-100 text-1 d-flex justify-content-between my-1">
+                                        <div class="py-1 px-3 bg-green-ex-light text-dark">css</div>
+                                        <div class="py-1 px-3 bg-green-ex-light text-dark">javascript</div>
+                                        <div class="py-1 px-3 bg-green-ex-light text-dark">WordPress</div>
+                                        <div class="py-1 px-3 bg-green-ex-light text-dark">SQL</div>
+                                        <div class="py-1 px-3 bg-green-ex-light text-dark">PHP</div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                                            </div>
+                    </div>
+                    <div class="col-lg-5 col-md-6">
+                        <div class="row">
+                            <div class="col-lg-1 "></div>
+                            <div class="col-lg-10 d-flex justify-content-between">
+                                <div class="py-2 px-3 btn text-white border-reg d-flex align-items-center justify-content-between" onclick="location.href=('/imojobs.com.ng');"><span class="material-symbols-outlined text-14 mr-2">arrow_back</span>home page</div>
+                                <div class="py-2 px-4 btn text-white bg-reg d-flex align-items-center justify-content-between" onclick="location.href=('../candidate-register.php')">See all posted jobs <span class="material-symbols-outlined text-14 ml-2">arrow_forward</span></div>
+                            </div>
+                        </div>
+                        <div class="d-flex justify-content-center">
+                            <div class="text-14 d-flex justify-content-evenly w-50 my-3 cursor-pointer">
+                                home <span class="clr-green-ex-light ml-2"> <span class="material-symbols-outlined text-1">arrow_forward_ios</span> company details </span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </section>
-        <!-- end hero section -->
-
+        </div>
+        <!--            End BreadCrumb-->
         <!-- start about-comapany section -->
         <section class="about-company-section py-60">
             <div class="container">
