--- a/index.html
+++ b/index.html
@@ -1251,28 +1251,32 @@
         </div>
     </div>
 </div>
-<div class="section-7-new w-100 py-5 ">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-6">
-                <img src="front_web/home/img/iwlp-img.jpg" alt="" class="w-100 rounded">
-            </div>
-            <div class="col-lg-6">
-                <div class="py-3 pl-2">
-                    <div class="h2 pb-3 font-archivo font-weight-bold">Imo Work and Learn programme</div>
-                    <div class="lead">
-                        <div class="pb-2">
-                            Imo Work and Learn programme Description
+<div class="section-7-new w-100 py-5 position-relative">
+    <div class="position-absolute top-0-cus w-100 h-100"></div>
+    <div class="position-absolute w-100 h-100">
+        <div class="container h-100">
+            <div class="row align-items-center">
+                <!--            <div class="col-lg-6">-->
+                <!--                <img src="front_web/home/img/iwlp-img.jpg" alt="" class="w-100 rounded">-->
+                <!--            </div>-->
+                <div class="col-lg-8">
+                    <div class="py-3 text-white pl-2">
+                        <div class="h1 pb-3 font-archivo font-weight-bold">Imo Work and Learn programme</div>
+                        <div class="lead">
+                            <div class="pb-2 text-mu">
+                                Imo Work and Learn programme Description
+                            </div>
+                            <div class="pb-2">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, dignissimos, totam? Cupiditate laboriosam nemo quasi quibusdam quisquam suscipit ullam voluptatum.
+                            </div>
+                            <div class="btn py-2 font-weight-bold font-archivo px-4 mt-4  bg-yellow hover-light">Learn More</div>
                         </div>
-                        <div class="pb-2">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, dignissimos, totam? Cupiditate laboriosam nemo quasi quibusdam quisquam suscipit ullam voluptatum.
-                        </div>
-                        <div class="btn py-2 font-weight-bold font-archivo px-4 mt-4  bg-yellow hover-light">Learn More</div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
 </div>
 <div class="section-9" data-aos="fade-up">
         <div class="container">
