--- a/job-details/f6vxgXybzC1t.html
+++ b/job-details/f6vxgXybzC1t.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-    
-<!-- Mirrored from imojobs.com.ng/job-details/f6vxgXybzC1t by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 20 Apr 2023 09:06:16 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
         <meta charset="utf-8">
@@ -108,73 +106,66 @@
         </div>
     </div>
 </nav>
-
-
-
         <div class="job-details-page">
-        <!-- start hero section -->
-        <section class="hero-section position-relative bg-light py-40">
-            <div class="container">
-                <div class="row align-items-center justify-content-center">
-                    <div class="col-12">
-                        <div class="row align-items-lg-center mb-3">
-                            <div class="col-lg-1 col-sm-2 col-3">
-                                <div class="job-profile-img mt-md-0 mt-3 pt-sm-1">
-                                    <img src="../uploads/profile-pictures/1/1618099961707.jpg" alt="job_detail_logo" class="rounded">
-                                </div>
+        <!--        Start BreadCrumb-->
+        <div class="breadcrumb-section text-white py-5 position-relative">
+            <div class="position-absolute top-0-cus w-100 h-100"></div>
+            <div class="container h-100 position-absolute top-0 w-100" style="left: 50%; transform: translateX(-50%)">
+                <div class="row h-100 align-items-center">
+                    <div class="col-lg-7 col-md-6 d-flex align-items-center">
+                        <div class="row align-items-center w-100">
+                            <div class="col-3">
+                                <img class="job-details rounded-circle" src="../uploads/profile-pictures/7/a.jpg" alt="">
                             </div>
-                            <div class="col-sm-10 col-9">
-                                <div class="hero-content ps-xl-0 ps-3 ">
-                                    <h4 class="text-secondary mb-0">
-                                        UI UX Designer
-                                                                            </h4>
-                                    <div class="hero-desc d-flex align-items-center flex-wrap">
-                                        <div class="d-flex align-items-center me-4 pe-2">
-                                            <i class="fa-solid fa-briefcase text-gray me-3 fs-18"></i>
-                                            <p class="fs-14 text-gray mb-0">
-                                                UI UX Design</p>
+                            <div class="col-8">
+                                <div class="pl-5 ml-5">
+                                    <div class="h4 w-100">SQL Developer</div>
+                                    <div class=" text-14 w-100 align-items-center justify-content-between jb-breadC font-archivo flex-wrap font-weight-light d-flex">
+                                        <div class="d-flex  align-items-center">
+                                            <span class="material-symbols-outlined jb-icon">work_history</span> UI UX Design
                                         </div>
-                                        <div class="desc d-flex align-items-center me-lg-4 me-2 pe-2">
-                                            <i class="fa-solid fa-clock text-gray me-3 fs-18"></i>
-                                            <p class="fs-14 text-gray mb-0">
-                                                3 days ago</p>
+                                        <div class="d-flex align-items-center justify-content-between">
+                                            <span class="material-symbols-outlined jb-icon">schedule</span> 2 days ago
                                         </div>
-                                                                                    <div class="desc d-flex align-items-center me-lg-4 me-2 pe-2">
-                                                <i class="fa-solid fa-money-bill text-gray me-3 fs-18"></i>
-                                                <span class="text-gray mb-0">
-                                                    ₦ 80K - 120K</span>
-                                            </div>
-                                                                            </div>
-                                                                            <div class="hero-desc d-md-flex">
-                                                                                            <div class="desc d-flex ">
-                                                    <span class="tag-badge">
-                                                        UI-UX</span>
-                                                </div>
-                                                                                    </div>
-                                                                    </div>
-                            </div>
-                        </div>
-                        <div class="row align-items-lg-center">
-                                                                                                <div class="hero-desc d-flex flex-wrap">
-                                        <div class="desc d-flex me-4 pe-2">
-                                            <button class="btn btn-outline-dark mb-3"
-                                                    onclick="window.location='../candidate-register.html'">Register to apply
-                                            </button>
-                                        </div>
-                                        <div class="desc d-flex me-4 pe-2">
-                                            <button class="btn btn-outline-success mb-3"
-                                                    onclick="window.location='../users/candidate-login.html'">
-                                                Apply For Job
-                                            </button>
+                                        <div class="d-flex align-items-center justify-content-between">
+                                            <span class="material-symbols-outlined jb-icon">payments</span> ₦ 240,000 - ₦ 409,000
                                         </div>
                                     </div>
-                                                                                    </div>
+                                    <div class="w-100 text-1 d-flex align-items-center mt-2 justify-content-evenly mb-3">
+                                        Job Rating: <span class="text-dark bg-yellow py-1 px-3 ">4.5</span>
+                                        <div class="ml-5 rating">
+                                            <span class="material-symbols-outlined clr-yellow ml-2">star</span>
+                                            <span class="material-symbols-outlined clr-yellow">star</span>
+                                            <span class="material-symbols-outlined clr-yellow">star</span>
+                                            <span class="material-symbols-outlined">star</span>
+                                            <span class="material-symbols-outlined">star</span>
+                                        </div>
+                                    </div>
+                                    <div class="w-100 text-1 d-flex justify-content-between my-1">
+                                        <div class="py-1 px-3 bg-green-ex-light text-dark">css</div>
+                                        <div class="py-1 px-3 bg-green-ex-light text-dark">javascript</div>
+                                        <div class="py-1 px-3 bg-green-ex-light text-dark">WordPress</div>
+                                        <div class="py-1 px-3 bg-green-ex-light text-dark">SQL</div>
+                                        <div class="py-1 px-3 bg-green-ex-light text-dark">PHP</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-5 col-md-6">
+                        <div class="row">
+                            <div class="col-lg-1 "></div>
+                            <div class="col-lg-10 d-flex justify-content-between">
+                                <div class="py-2 px-3 btn text-white border-reg d-flex align-items-center justify-content-between" onclick="location.href=('/imojobs.com.ng');"><span class="material-symbols-outlined text-14 mr-2">arrow_back</span> Register to apply</div>
+                                <div class="py-2 px-4 btn text-white bg-reg d-flex align-items-center justify-content-between" onclick="location.href=('../candidate-register.php')">Apply for Job <span class="material-symbols-outlined text-14 ml-2">arrow_forward</span></div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- end hero section -->
-
+        </div>
+        <!--            End BreadCrumb-->
         <!-- start job-details section -->
         <section class="job-details-section py-60">
             <div class="container">
